<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfddc7"


    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_below="@+id/toolbar"
        android:text="@string/erroCadastro" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/editText2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/editText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/editText3"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/cadastro"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/button"
        android:inputType="textPersonName" />
</RelativeLayout>