<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfddc7"

    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <Button
        android:id="@+id/btnScan"
        android:layout_width="1200sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/toolbar"
        android:text="@string/scan"/>


    <Button
        android:id="@+id/button3"
        android:layout_width="1200sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/btnScan"
        android:text="@string/cadastro"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="1200sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/button3"
        android:text="@string/lista1"/>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/logo" />

</RelativeLayout>